--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     properties:
       hibernate:
         default_schema: ${spring.jpa.properties.hibernate.default_schema}
+    show-sql: true
 logging:
   level:
     org:
