[#9] chore: jwt 토큰 정보 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,7 @@ logging:
             sql:
       springframework:
         web: ERROR
+jwt:
+  secretKey: ${jwt.secretKey}
+  signatureAlgorithm: ${jwt.signatureAlgorithm}
+  tokenExpired: ${jwt.tokenExpired}
